playlist almost done, missing custom scrollbar and fix the fonts

--- a/imports/ui/stylesheets/nav.less
+++ b/imports/ui/stylesheets/nav.less
@@ -2,7 +2,7 @@
 
 .nav {
   height: 100%;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   background-color: #fff;
   overflow-x: hidden;
