--- a/imports/ui/stylesheets/playlists.less
+++ b/imports/ui/stylesheets/playlists.less
@@ -1,3 +1,7 @@
+.playlistContainer {
+  display:flex; flex-direction: column; height: 100%;
+}
+
 .titleContainer {
   font-size: 20px;
   font-family:'Roboto-Light';
@@ -16,12 +20,18 @@
   margin-bottom: 1px;
 }
 
+.videosListContainer {
+  flex: 1;
+  overflow-y: auto;
+}
+
 .videoCardContainer{
   width:362px;
   background-color: white;
   margin-left: 20px;
   margin-top: 10px;
-  //position: 0px;
+  margin-top: 10px;
+  margin: 10px 0px 10px 20px;
   border-radius: 12px;
   border-right: .1rem solid lightgray;
   border-left: .1rem solid lightgray;
@@ -32,7 +42,7 @@
 
 .videoCardTitle{
   width: 100%;
-  font-size: 20px;
+  font-size: 18px;
   padding: 8px;
   white-space: nowrap;
   overflow: hidden;
@@ -45,20 +55,20 @@
 
 .videoCardViews{
   font-size: 16px;
-  width: ~"calc(65% - 7px)";
+  width: 65%;
   padding: 3px;
   text-align: center;
-  color: gray;
+  color: #999;
   border-right: .1rem solid lightgray;
   float:left;
 }
 
 .videoCardLikes{
   font-size: 16px;
-  width: ~"calc(35% - 6px)";
+  width: 35%;
   padding: 3px;
   text-align: center;
-  color: gray;
+  color: #999;
   float:left;
 }
 
@@ -66,7 +76,10 @@
   position:absolute;
   right: 0;
   bottom: 0;
+  margin: 16px;
+  padding: 5px;
   color: white;
+  font-weight:bold;
   background-color: rgba(0,0,0,0.6);
   border-radius: 3px;
 }
@@ -75,8 +88,11 @@
   position:absolute;
   right: 0;
   top: 0;
+  margin: 16px;
+  padding: 5px;
   color: white;
-  background-color: blue;
+  font-weight:bold;
+  background-color: #7d70ff;
   border-radius: 3px;
 }
 
